// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown multi-select Renders multiselect Dropdown correctly 1`] = `
<div
  className="ms-Dropdown-container"
>
  <div
    aria-activedescendant={undefined}
    aria-describedby="Dropdown94-option"
    aria-disabled={undefined}
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="Dropdown94-label"
    aria-live="assertive"
    aria-owns={undefined}
    className="ms-Dropdown"
    data-is-focusable={true}
    id="Dropdown94"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="combobox"
    tabIndex={0}
  >
    <span
      aria-atomic={true}
      className="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder"
    />
    <span
      className="ms-Dropdown-caretDownWrapper"
    >
      <i
        aria-hidden={true}
        className=
            ms-Dropdown-caretDown
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: inline-block;
              font-family: "FabricMDL2Icons";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
        data-icon-name="ChevronDown"
        role="presentation"
      >
        
      </i>
    </span>
  </div>
</div>
`;

exports[`Dropdown single-select Renders single-select Dropdown correctly 1`] = `
<div
  className="ms-Dropdown-container"
>
  <div
    aria-activedescendant={undefined}
    aria-describedby="Dropdown0-option"
    aria-disabled={undefined}
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="Dropdown0-label"
    aria-live="assertive"
    aria-owns={undefined}
    className="ms-Dropdown"
    data-is-focusable={true}
    id="Dropdown0"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="combobox"
    tabIndex={0}
  >
    <span
      aria-atomic={true}
      className="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder"
    />
    <span
      className="ms-Dropdown-caretDownWrapper"
    >
      <i
        aria-hidden={true}
        className=
            ms-Dropdown-caretDown
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: inline-block;
              font-family: "FabricMDL2Icons";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
        data-icon-name="ChevronDown"
        role="presentation"
      >
        
      </i>
    </span>
  </div>
</div>
`;
